<resources>
    <string name="app_name">APP Ecosistemas</string>
    <string name="bienvenido_title">Bienvenido a EduActivity</string>
    <string name="login_nombre">Nombre</string>
    <string name="login_user">Usuario</string>
    <string name="login_lastnamep">Apellido paterno</string>
    <string name="login_lastnamem">Apellido materno</string>
    <string name="login_password">Password</string>
    <string name="seleccionar_escuela">Seleccionar escuela</string>
    <string name="seleccionar_ecosistema">Seleccionar ecosistema</string>
    <string name="login_txt">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="crear_ecosistema">Crear Ecosistema</string>
    <string name="agregar_entidad">Agregar Entidad</string>
    <string name="eliminar_ecosistema">Eliminar Ecosistema</string>
    <string name="modificar_ecosistema">Modificar Ecosistema</string>
    <string name="cantidad_usuarios">Cantidad de Usuarios</string>
    <string name="nombre_ecosistema">Nombre del Ecosistema</string>
    <string name="nombre_entidad">Nombre de la Entidad</string>
    <string name="disparador_ecosistema">Disparador</string>
    <string name="descripcion_ecosistema">Descripcion</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="altitud">Altitud</string>
    <string name="rango_diametro">Rango Diámetro</string>
    <string name="subir_archivo">Subir Archivo</string>
    <string name="archivo">Archivo</string>
    <string name="tipo_de_ecosistema">Tipo de Ecosistema</string>
    <string name="logo_app">logo App</string>
    <string name="home">Inicio</string>
    <string name="profile">Mi Perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="instructions_title">Instrucciones</string>
    <string name="activities">Actividades</string>
    <string name="registro">Registro</string>
    <string name="seleccionar_el_grado">Seleccionar el grado</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Aceptar</string>
    <string name="error">Error</string>
    <string name="no_activity_error">No se pudo cargar la actividad, inténtelo de nuevo mas tarde</string>
    <string name="no_internet">No hay conexión a internet</string>
    <string name="no_user_error">No se pudieron cargar los datos del usuario, inténtelo de nuevo más tarde</string>
    <string name="unknown_error">Ha ocurrido un error, si persiste avisa a los encargados de la prueba.</string>
    <string name="cancel">Cancelar</string>
    <string name="notice">Aviso</string>
    <string name="exit_save">Perfil guardado con éxito</string>
    <string name="logout_message">¿Está seguro que desea cerrar sesión?</string>
    <string name="activity_number">Actividad %1$d</string>
    <string name="activity_title">%1$s</string>
    <string name="activity_points">Puntos de actividad %1$d</string>
    <string name="cargando">Cargando…</string>
    <string name="espere">Espere</string>
    <string name="finalizar">Finalizar</string>
    <string name="actividad_finalizada">¡Actividad finalizada!</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="iniciar">Iniciar</string>
    <string name="instrucciones_audibles">Instrucciones audibles</string>
    <string name="imagen_de_actividad">Imagen de actividad</string>
    <string name="nombre_ejemplo">Julian Campos</string>
    <string name="modify">Modificar perfil</string>
    <string name="verificacion_pin">Ingrese el Nip de control</string>
    <string name="nip_control">NIP</string>
    <string name="boton_de_confirmacion">boton de confirmacion</string>
    <string name="no_data_message">No se pudieron leer datos de inicio de sesión</string>

</resources>