<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:fillViewport="true"
    tools:context=".ui.ecosistema_digital_aumentado.ecosistema_details.EcosistemaDetailsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_ecosistema_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/nombre_ecosistema">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre_ecosistema_edit_text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cantidad_usuario_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/cantidad_usuarios">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cantidad_usuario_edit_text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spn_disparador_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/disparador_ecosistema"
            android:minHeight="48dp"
            android:prompt="@string/disparador_ecosistema"/>

        <Spinner
            android:id="@+id/spn_tipo_ecosistema_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/tipo_de_ecosistema"
            android:minHeight="48dp"
            android:prompt="@string/tipo_de_ecosistema"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcion_ecosistema_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/descripcion_ecosistema">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descripcion_ecosistema_edit_text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longitud_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/longitud"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longitud_edit_text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitud_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/latitud"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latitud_edit_text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/altitud_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/altitud"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/altitud_edit_text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rango_diametro_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/rango_diametro"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rango_diametro_edit_text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_modificar_ecosistema_details"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/modificar_ecosistema"
                android:textColor="#6A1B9A"
                android:layout_gravity="center_horizontal"
            />

            <Button
                android:id="@+id/btn_agregar_entidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="38dp"
                android:paddingEnd="38dp"
                android:text="@string/agregar_entidad"
                android:textColor="#6A1B9A"
                android:layout_gravity="center_horizontal"
            />

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="21dp"
                android:paddingEnd="21dp"
                android:text="@string/eliminar_ecosistema"
                android:textColor="#6A1B9A"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </LinearLayout>


</ScrollView>