<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity_fragments_common.InstructionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/tv_audio_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Identificación de figuras" />

        <TextView
            android:id="@+id/tv_audio_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instrucciones"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_audio_instructions"
            app:layout_constraintEnd_toStartOf="@id/iv_audio_instructions"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_audio_instructions" />

        <ImageView
            android:id="@+id/iv_audio_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/instrucciones_audibles"
            android:src="@drawable/ic_sound"
            app:layout_constraintBottom_toTopOf="@id/et_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_audio_label"
            app:layout_constraintTop_toBottomOf="@id/tv_title_instructions" />

        <EditText
            android:id="@+id/et_instructions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:autofillHints="name"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="top"
            android:hint="@string/instrucciones"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@id/btn_begin_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_audio_instructions"
            tools:text="@string/bienvenido_title" />

        <Button
            android:id="@+id/btn_begin_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar"
            android:textColor="#7E57C2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_instructions" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
