<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="25dp"
    tools:context=".ui.perfil.parentalcontrol.ControlParentalFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_pin_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/verificacion_pin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pin_verificacion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:hint="@string/nip_control"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_pin_verification">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_pin_verificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/btn_ingresar_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/purple_500"
        android:contentDescription="@string/boton_de_confirmacion"
        app:layout_constraintBottom_toBottomOf="@+id/til_pin_verificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/til_pin_verificacion"
        app:layout_constraintTop_toTopOf="@+id/til_pin_verificacion"
        app:srcCompat="@drawable/ic_next" />

</androidx.constraintlayout.widget.ConstraintLayout>